--- a/public/latest/assets/auth-css/style.css
+++ b/public/latest/assets/auth-css/style.css
@@ -102,3 +102,79 @@ body {
 .header-section{
   padding-top: 1rem;
 }
+
+.dark-mode-bttn {
+  z-index: 999999;
+  max-height: 75px;
+  max-width: 42px;
+  min-height: 75px;
+  min-width: 36px;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  cursor: pointer;
+  background-color: #fff;
+  border: 1px solid #d7def4;
+  border-radius: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 6px;
+  display: flex;
+  position: fixed;
+  top: 50%;
+  bottom: auto;
+  left: auto;
+  right: 2%;
+}
+.dark-mode-bttn label {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.8rem;
+  height: 1.8rem;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: ease-in-out .3s;
+  cursor: pointer;
+}
+
+.dark-mode-bttn label i {
+  color: #66768E;
+}
+
+.dark-mode-bttn label.active {
+  background-color: #294CFF;
+  transition: ease-in-out .3s;
+}
+
+.dark-mode-bttn label.active i {
+  color: #fff;
+}
+
+.dark-mode-bttn {
+  border-color: rgb(215, 222, 244);
+  background-color: rgb(255, 255, 255);
+}
+
+.dark-mode-bttn label:first-child { 
+    background-color: #294CFF !important; 
+}
+
+.dark-mode-bttn label:last-child { 
+  background-color: transparent !important; 
+}
+
+body.dark-mode .dark-mode-bttn label:first-child{
+  background-color: transparent !important;
+}
+body.dark-mode .dark-mode-bttn label:first-child i{
+  color: #66768E;
+}
+body.dark-mode .dark-mode-bttn label:last-child {
+  background-color: #7289FF !important;
+}
+body.dark-mode .dark-mode-bttn label:last-child i{
+  color: #fff;
+}
