--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -116,6 +116,7 @@
         }
     }
 
+    .form-select,
     .user-search-box-wrap .form-group .form-control {
         border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
         background: #0D0D0D !important;
@@ -413,15 +414,457 @@
     }
 
     .paggination-wrap .pagination .page-item.active .page-link {
-        border-radius: 3.125rem!important;
-        background: rgba(145, 158, 171, 0.16)!important;
+        border-radius: 3.125rem !important;
+        background: rgba(145, 158, 171, 0.16) !important;
     }
 
-    .alert.alert-success{
-        background: #60c296!important;
+    .alert.alert-success {
+        background: #60c296 !important;
+        color: #fff !important;
+    }
+
+    .course-progress-content,
+    .course-progress-circle,
+    .my-courses-box,
+    .status-card-box {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
+
+    .status-card-box .d-flex span {
+        background: rgba(114, 233, 79, 0.60) !important;
+        color: #fff !important;
+
+        img {
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%) !important;
+        }
+    }
+
+    .time-chart-select {
+        color: #fff !important;
+
+        option {
+            color: #0D0D0D !important;
+        }
+    }
+
+    .profile-widget-history {
+        background: #131313 !important;
+    }
+
+    .course-status-wrap table tr td a {
+        color: #fff !important;
+    }
+
+    .course-status-wrap table tr td .media p {
+        color: #637381 !important;
+    }
+
+    .course-progress-content {
+        ul {
+            li {
+                color: #d7def4 !important;
+            }
+        }
+    }
+
+    .course-status-wrap table tr td {
+        .progress {
+            background: rgba(101, 119, 255, 0.24) !important;
+
+            .progress-bar {
+                background: #C3C7E8 !important;
+            }
+        }
+    }
+
+    .student-courses-lists-pages .course-ol-box {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
+
+    .student-courses-lists-pages .course-ol-box ul li {
+        color: #d7def4 !important;
+    }
+
+    .student-courses-lists-pages .course-ol-box .btn,
+    .student-courses-lists-pages .course-ol-box a {
+        background-color: #7289FF !important;
+    }
+
+    .course-review-wrap .media.course-review-input-box input {
+        color: #fff !important;
+    }
+
+    .what-you-learn-box ul {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+
+        li {
+            color: #C5CCD8 !important;
+        }
+    }
+
+    .course-outline-wrap .accordion .accordion-item button,
+    .course-outline-wrap .accordion .accordion-item {
+        background-color: transparent !important;
+        border-color: #2C2C2C !important;
+    }
+
+    .course-rev-box p,
+    .course-outline-wrap .accordion .accordion-item .lesson-wrap a {
+        color: #d7def4 !important;
+    }
+
+    .course-rev-box {
+        border: 1px solid #2C2C2C !important;
+        background: #0D0D0D !important;
+    }
+
+    .course-overview-right-part {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
+
+    .course-overview-right-part .course-main-thumb .enrol-bttn {
+        background-color: #7289FF !important;
+        color: #0D0D0D !important;
+    }
+
+    .course-review-wrap .media.course-review-input-box input,
+    .course-overview-right-part .course-desc-txt {
+        border-color: #2C2C2C;
+    }
+
+    .course-overview-right-part .course-details-txt p,
+    .course-overview-right-part .course-desc-txt p {
+        color: #d7def4;
+
+        img {
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+        }
+    }
+
+    .student-courses-lists-pages .course-progress-bar .progress .progress-bar {
+        background: var(--error-red-light, #ED5763) !important;
+    }
+
+    .student-courses-lists-pages .course-progress-bar .d-flex {
+        h6 {
+            color: #ED5763 !important;
+        }
+    }
+
+    .user-add-box button,
+    .user-add-box a {
+        color: #0D0D0D !important;
+
+        &:hover {
+            color: #fff !important;
+        }
+    }
+
+    .subscription-table-wrap table tr td a {
+        background: transparent !important;
+        color: #fff !important;
+        border-radius: 50% !important;
+    }
+
+
+    .subscription-table-wrap.filter-image table tr td a {
+        border-radius: 10% !important;
+        background: rgba(174, 182, 240, 0.10) !important;
+
+
+        img {
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%) !important;
+        }
+    }
+
+    .completed {
+        color: #12AE60 !important;
+    }
+
+    .message-list-page-wrap .messages-box .chat-person-list-box,
+    .message-list-page-wrap .messages-box {
+        border-color: #313A49 !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+        background: #0D0D0D !important;
+        border-radius: 1rem 0 0 0;
+    }
+
+    .message-list-page-wrap .messages-box .chat-person-list-box .search input {
+        border-color: #171717 !important;
+        background-color: transparent !important;
+        color: #fff;
+    }
+
+    .message-list-page-wrap .messages-box .chat-person-list-box .search {
+        border-color: #171717 !important;
+    }
+
+    .message-list-page-wrap .messages-box .chat-person-list-box .person-tab-body .media:hover {
+        background-color: #171717 !important;
+    }
+
+    .student-messages-page .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item {
+        color: #D2DEEF !important;
+        background-color: #121212 !important;
+    }
+
+    .message-list-page-wrap .messages-box .chat-person-list-box .person-tab-body .media {
+        border-bottom: #171717 !important;
+    }
+
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room {
+        border-color: #66768E !important;
+    }
+
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .reciver {
+        background: #121212 !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.10) !important;
+
+        p {
+            color: #d7def4 !important;
+        }
+    }
+
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .sender {
+        background: #E8EBFB !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.10) !important;
+    }
+
+    .message-list-page-wrap .messages-box .chat-main-body-box .message-send-box input {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+        color: #fff !important;
+    }
+
+    .message-list-page-wrap .messages-box .chat-main-body-box .message-send-box .btn-prm {
+        background-color: #7289FF !important;
+        color: #0D0D0D !important;
+        border-radius: 0.375rem !important;
+    }
+
+    .enroll-course-list .list-wrap {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+
+        th {
+            border-bottom: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+            background: #171717 !important;
+        }
+    }
+
+    .enroll-course-list .list-wrap table tr td span {
+        background: #1E382A !important;
+        color: #06CA68 !important;
+    }
+
+    .enroll-course-list .list-wrap table tr td a {
+        color: #7289FF !important;
+    }
+
+
+    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box,
+    .student-profile-update-page .own-profile-box {
+        border: 1px solid #262626 !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
+
+    .student-profile-update-page .own-profile-box .header .nav .nav-item .active.nav-link {
+        color: #fff !important;
+        border-color: #7289FF !important;
+    }
+
+    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box .form-check label {
+        color: #d7def4 !important;
+    }
+
+    .student-profile-update-page .own-profile-box .custom-padding .profile-picture-box h6 {
+        color: #637381 !important;
+    }
+
+    .profile-text-box .form-floating label {
+        color: #C9D3DE !important;
+    }
+
+    .profile-text-box .form-floating .form-control {
+        background-color: transparent !important;
+        border-color: #919EAB !important;
+        color: #C9D3DE !important;
+    }
+
+    .user-add-form-wrap-2 {
+        background-color: transparent !important;
+        border: 0 !important;
+        box-shadow: none !important;
+    }
+
+    .user-search-box-wrap .form-group i {
+        color: #d7def4 !important;
+    }
+
+    .course-description-box p {
+        color: #A6B1C4 !important;
+    }
+
+    .course-details p {
+        color: #DADADA;
+
+        img {
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+        }
+    }
+
+    .course-details {
+        border-color: #2C2C2C;
+    }
+
+    .course-modules-boxx {
+        border: 1px solid #2C2C2C;
+        background: #0D0D0D;
+    }
+
+    .course-modules-boxx .text-center {
+        a {
+            color: #d7def4 !important;
+        }
+    }
+
+    .course-modules-boxx ul li span {
+        color: #d7def4 !important;
+    }
+
+    // instructor css
+    .recent-payment-box,
+    .welcome-back-box {
+        border: 1px solid #262626 !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
+
+    .bundle-create-bttn .btn,
+    .lesson-files-upload .close-icon,
+    .welcome-back-box .progress .progress-bar {
+        background-color: #7289FF !important;
+    }
+
+    .welcome-back-box .d_flex span {
+        color: #d7def4;
+    }
+
+    .bundle-create-inputs .input-group label,
+    .bundle-create-inputs .form-group label,
+    .recent-payment-box .payment-box p {
+        color: #d7def4;
+    }
+
+    .recent-payment-box .payment-box a {
+        color: #7289FF !important;
+    }
+
+    .recent-update-box .media {
+        border-color: #262626 !important;
+    }
+
+    .user-add-form-wrap form .form-group label,
+    .chart-box-wrap {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16) !important;
+    }
+
+    .select-bundle-title .btn {
+        background: #1E1E1E !important;
+        color: #d7def4 !important;
+
+        img {
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%) !important;
+        }
+    }
+
+    .bundle-create-form-wrap {
+        border-top: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+    }
+
+    .selected-bundle-courses-wrap {
+        background: #161616 !important;
+    }
+
+    .bundle-create-inputs .input-group .form-control,
+    .bundle-create-inputs .form-group .form-control {
+        border: 1px solid #2C2C2C!important;
+        background: #0D0D0D!important;
         color: #fff!important;
     }
+
+    .bundle-create-inputs .input-group .input-group-text, .bundle-create-inputs .form-group .input-group-text{
+        border-color: #2C2C2C!important;
+        color: #fff!important;
+    }
+
+    .header-area .navbar-nav .nav-item .submenu-box li a:hover{
+        background-color: #131313!important;
+    }
+
+    .user-add-box button img, .user-add-box a img{
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(319deg) brightness(102%) contrast(101%)!important;
+        transition: all linear .3s;
+    }
+    .user-add-box button img, .user-add-box a:hover img{
+        filter: invert(0%) sepia(100%) saturate(0%) hue-rotate(171deg) brightness(93%) contrast(105%)!important;
+    }
+
+    .subscription-table-wrap table tr td,
+    .enroll-course-list .list-wrap table tr td{
+        color: #d7def4!important;
+    }
+
+    .earning-table{
+        border-color: #2C2C2C!important;
+        box-shadow: none!important;
+    }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .dark-mode-bttn {
     z-index: 999999;
