instructor panel dark mode

--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -621,18 +621,21 @@
   background: #0D0D0D !important;
   color: #fff !important;
 }
-.dark-mode .bundle-create-inputs .input-group .input-group-text, .dark-mode .bundle-create-inputs .form-group .input-group-text {
+.dark-mode .bundle-create-inputs .input-group .input-group-text,
+.dark-mode .bundle-create-inputs .form-group .input-group-text {
   border-color: #2C2C2C !important;
   color: #fff !important;
 }
 .dark-mode .header-area .navbar-nav .nav-item .submenu-box li a:hover {
   background-color: #131313 !important;
 }
-.dark-mode .user-add-box button img, .dark-mode .user-add-box a img {
+.dark-mode .user-add-box button img,
+.dark-mode .user-add-box a img {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(319deg) brightness(102%) contrast(101%) !important;
   transition: all linear 0.3s;
 }
-.dark-mode .user-add-box button img, .dark-mode .user-add-box a:hover img {
+.dark-mode .user-add-box button img,
+.dark-mode .user-add-box a:hover img {
   filter: invert(0%) sepia(100%) saturate(0%) hue-rotate(171deg) brightness(93%) contrast(105%) !important;
 }
 .dark-mode .subscription-table-wrap table tr td,
@@ -642,6 +645,175 @@
 .dark-mode .earning-table {
   border-color: #2C2C2C !important;
   box-shadow: none !important;
+}
+.dark-mode .instructor-profile-update-page .own-profile-box.account-settings-box {
+  background-color: transparent !important;
+  border: 0 !important;
+  box-shadow: none !important;
+}
+.dark-mode .instructor-profile-update-page .user-expperience-box,
+.dark-mode .instructor-profile-update-page .account-settings-box .tab-pane.active-bg {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #0D0D0D;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2);
+}
+.dark-mode .instructor-profile-update-page .account-settings-box .profile-text-box-2 {
+  background: #0D0D0D !important;
+}
+.dark-mode .instructor-profile-update-page .user-expperience-box .media p {
+  color: #d7def4 !important;
+}
+.dark-mode .instructor-profile-update-page .user-expperience-box .brdr-bttm {
+  border-color: #2C2C2C !important;
+}
+.dark-mode .instructor-profile-update-page .user-expperience-box .media h6 {
+  color: #7C7C7C !important;
+}
+.dark-mode .instructor-profile-update-page .certificate-header-tab .nav .nav-item .nav-link {
+  border: 1.5px solid var(--others-dark-stroke, #1A1A1A) !important;
+  background: #0D0D0D !important;
+}
+.dark-mode .instructor-profile-update-page .certificate-header-tab .nav .nav-item .nav-link.active {
+  border: 1.5px solid #5672FF !important;
+}
+.dark-mode .instructor-profile-update-page .create-certificate-form {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
+}
+.dark-mode .instructor-profile-update-page .create-certificate-form .certificate-name .form-control {
+  border-radius: 0.5rem !important;
+  border: 1px solid rgba(145, 158, 171, 0.32) !important;
+  background-color: transparent !important;
+  color: #fff;
+}
+.dark-mode .instructor-profile-update-page .create-certificate-form .certificate-name .media img {
+  filter: invert(42%) sepia(88%) saturate(1229%) hue-rotate(212deg) brightness(109%) contrast(101%) !important;
+}
+.dark-mode .instructor-profile-update-page .certificate-asset-upload .upload-media-box {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
+}
+.dark-mode .instructor-profile-update-page .certificate-asset-upload .upload-media-box span {
+  color: #5672FF !important;
+}
+.dark-mode .instructor-profile-update-page .certificate-style-box,
+.dark-mode .instructor-profile-update-page .create-certificate-form .certificate-name {
+  border-color: #1A1A1A;
+}
+.dark-mode .instructor-profile-update-page .create-certificate-form-2 .form-group label {
+  background-color: #0D0D0D !important;
+}
+.dark-mode .dark-mode .common-bttn {
+  color: #0D0D0D !important;
+}
+.dark-mode .student-profile-update-page .own-profile-box .header {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  background: #0D0D0D;
+}
+.dark-mode .content-settings-form-wrap .form-control:valid + label,
+.dark-mode .content-settings-form-wrap .form-control:focus + label {
+  background: #0D0D0D !important;
+}
+.dark-mode .content-settings-form-wrap .form-control {
+  color: #fff !important;
+}
+.dark-mode .content-settings-form-wrap .form-control:hover,
+.dark-mode .content-settings-form-wrap .form-control:focus-within {
+  border-color: #7289FF !important;
+}
+.dark-mode .dns-page-wrapper .account-settings-box .tab-pane.active-bg {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #0D0D0D;
+  box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+}
+.dark-mode .dns-page-wrapper .logo-box-view {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #141414;
+}
+.dark-mode .dns-page-wrapper .theme-settings-box {
+  background-color: transparent !important;
+}
+.dark-mode .dns-page-wrapper .file-upload-area {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
+}
+.dark-mode .dns-page-wrapper .file-upload-area p span {
+  color: #5672FF !important;
+}
+.dark-mode .dns-page-wrapper .login-page-theme-box,
+.dark-mode .dns-page-wrapper .feat-box {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
+}
+.dark-mode .dns-page-wrapper .feat-box .media img {
+  filter: invert(42%) sepia(88%) saturate(1229%) hue-rotate(212deg) brightness(109%) contrast(101%) !important;
+}
+.dark-mode .dns-page-wrapper .logo-box-view p,
+.dark-mode .dns-page-wrapper .dns-main-body .d-flex a,
+.dark-mode .dns-page-wrapper .dns-main-body .domain-verify-box .form-check label,
+.dark-mode .dns-page-wrapper .dns-main-body .add-domain-box p,
+.dark-mode .dns-page-wrapper .favicon-box p,
+.dark-mode .dns-page-wrapper .meta-box p,
+.dark-mode .dns-page-wrapper .certificate-style-box .media .media-body p,
+.dark-mode .dns-page-wrapper .feat-box .media p {
+  color: #A6B1C4;
+}
+.dark-mode .dns-page-wrapper .certificate-style-box.login-page-theme-box .media.active {
+  border-color: #5672FF !important;
+}
+.dark-mode .dns-page-wrapper .save-bttns .btn-submit {
+  background-color: #5672FF !important;
+  border-color: #5672FF !important;
+}
+.dark-mode .dns-page-wrapper .favicon-box,
+.dark-mode .dns-page-wrapper .meta-box {
+  background: #141414;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+}
+.dark-mode .dns-page-wrapper .meta-box .form-control {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #1D1D1D;
+  color: #fff;
+}
+.dark-mode .dns-page-wrapper .dns-left-sidebar {
+  border-right: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #0D0D0D;
+}
+.dark-mode .dns-page-wrapper .dns-main-body {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A);
+  background: #0D0D0D;
+}
+.dark-mode .dns-page-wrapper .dns-main-body .add-domain-box .form-control {
+  border: 1px solid #5672FF;
+  background: #101010;
+  box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+  color: #fff;
+}
+.dark-mode .dns-page-wrapper .dns-left-sidebar .setup-step .step-box p {
+  color: #66768E !important;
+}
+.dark-mode .dns-page-wrapper .dns-left-sidebar .setup-step .step-box.active p,
+.dark-mode .dns-page-wrapper .dns-main-body .finish-txt a {
+  color: #5672FF !important;
+}
+.dark-mode .dns-page-wrapper .dns-main-body .d-flex a img {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+}
+.dark-mode .dns-page-wrapper .dns-left-sidebar .setup-step .step-box.active span {
+  border-color: #5672FF !important;
+  outline-color: #2F3A4C !important;
+  box-shadow: 0px 0px 0px 4px #F4EBFF !important;
+}
+.dark-mode .dns-page-wrapper .dns-left-sidebar .setup-step .step-box.active:before {
+  background-color: #5672FF !important;
+}
+.dark-mode .dns-page-wrapper .dns-left-sidebar .setup-step .step-box.big span {
+  border-color: #5672FF !important;
+  outline-color: #2F3A4C !important;
 }
 
 .dark-mode-bttn {
